--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,9 @@ body {
     font-size: 48px;
 }
 
-.header h1 .seo {
+/* .header h1 .seo {
     color: #d9dcd6;
-}
+} */
 
 .header div {
     padding-top: 15px;
