--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ a {
 }
 
 p {
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .hero {
@@ -86,7 +86,12 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-title {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+/* .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -99,8 +104,13 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+} */
 
+.benefit-title h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+/* 
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -114,8 +124,14 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
+.benefit-title img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+/* 
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -132,9 +148,10 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+} */
 
-.search-engine-optimization {
+/* combination of following 3 items into a single class */
+.common-info-box {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -142,6 +159,15 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+
+/* .search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+} 
 
 .online-reputation-management {
     margin-bottom: 20px;
@@ -159,24 +185,24 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+} */
 
 /* Combine all these (next 3) to - set common image size */
 /* .describe_image_size img {
     max-height: 200px;
 }
  */
-.search-engine-optimization img {
+ .common-info-box img {
     max-height: 200px;
 }
-
+/* 
 .online-reputation-management img {
     max-height: 200px;
 }
 
 .social-media-marketing img {
     max-height: 200px;
-}
+} */
 
 /* Combine all these (next 3) - they are the same h2 class */
 /* .describe_heading_size h2 {
@@ -184,11 +210,12 @@ p {
     font-size: 36px;
  } */
 
-.search-engine-optimization h2 {
+.common-info-box h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
+/* 
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -197,7 +224,7 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+} */
 
 .footer {
     padding: 30px;
